traefik/egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'docs'
        selector: app == 'docs'
        ports:
          - 80
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'forward-auth'
        ports:
          - 4181
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'healthchecks'
        selector: app == 'healthchecks'
        ports:
          - 8000
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'keycloak'
        selector: app == 'keycloak'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'kubernetes-dashboard'
        selector: app.kubernetes.io/instance == 'kubernetes-dashboard'
        ports:
          - 8443
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'nextcloud'
        selector: app == 'nextcloud'
        ports:
          - 80
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'media'
        selector: app == 'plex'
        ports:
          - 32400
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'media'
        selector: app == 'radarr'
        ports:
          - 7878
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'media'
        selector: app == 'sabnzbd'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'media'
        selector: app == 'sonarr'
        ports:
          - 8989
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: >-
          release == 'gitlab' &&
          app == 'webservice'
        ports:
          - 8080
          - 8181
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: >-
          release == 'gitlab' &&
          app == 'registry'
        ports:
          - 5000
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: >-
          release == 'gitlab' &&
          app == 'minio'
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: >-
          release == 'gitlab' &&
          app == 'gitlab-shell'
        ports:
          - 2222
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'backup-minio'
        selector: release == 'backup-minio'
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'argocd'
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'server'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'prometheus-pushgateway'
        ports:
          - 9091
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'prometheus'
        ports:
          - 9090
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'alertmanager'
        ports:
          - 9093
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - 10.0.0.3/32
        ports:
          - 80
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - 10.0.0.6/32
        ports:
          - 5001
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'wallabag'
        selector: app == 'wallabag'
        ports:
          - 80
